--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
+
+    <!-- Navigation Drawer -->
+    <string name='enter_full_name'>Full Name</string>
+    <string name='enter_email'>Email</string>
+    <string name='enter_phone'>Phone Number</string>
+    <string name='enter_password'>Password</string>
+    <string name='select_bloodType'>Blood Type</string>
+    <string name='enter_race'>Race</string>
+    <string name='next_btn'>NEXT</string>
+    <string name='login_btn'>LOGIN</string>
 </resources>
